# lizard-askpass

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
common/: Cargo.toml
common/src/: interactive.rs  keyboard.rs  lib.rs  matrix.rs
nix/modules/: devshell.nix  module.nix  rust.nix  test-machine.nix
nix/test-vm-config/: default.nix  disk.nix  lizard-askpass.nix
src/: keyboard.rs  main.rs
stdio/: Cargo.toml
stdio/src/: main.rs
systemd-password-agent/: Cargo.toml
systemd-password-agent/src/: main.rs
