[package]
authors = ["viviridian <dev@vvn.space>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "lizard_askpass_common"
description = "A simple Rust project using Nix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.29.0", features = ["termion"] }
color-eyre = { version = "0.6.3" }
tui-textarea = { version = "0.7.0" }

